src/test/deca/codegen/valid/float_ieee754_conversion.deca
/**
    Description: test sur la correction de l'arrondi de flottants

    Résultat : à définir...
*/
{
    float w = -4254.55;
    print("Si la valeur -4254.5498046875 est affichée, test réussi !");
    println(x);
    float x = 0.1;
    print("Si la valeur 0.100000001490116119384765625 est affichée, test réussi !");
    println(x);
    float y = 1.3;
    print("Si la valeur 1.2999999523162841796875 est affichée, test réussi !");
    println(y);
    float z = 10000.5;
    print("Si la valeur 10000.5 est affichée, test réussi !");
    println(z);

}
