src/test/deca/codegen/invalid/overflow_sub_float.deca
/*
    Description : Test sur la gestion de l'overflow sur la soustraction de float

    Résultat : à définir...

*/

{
    println(-5000000000.5-5000000000.1);
    println("Test échoué : voir p96 paragraphe 5 phrase 3 et 5");
}
